Fix feedback button getting cut off on contact-us page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -551,6 +551,10 @@ iframe.twitter-timeline {
   border: 1px solid #ddd !important;
 }
 
+#contact-us-container {
+  margin-bottom: 50px;
+}
+
 #feedback{
   border:0px solid #fff;
   background:#660000 url('/images/feedback-tab-left.png') top left no-repeat;
